

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/material_deep_teal_200"
        android:id="@+id/frameLayout2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/food_title"
            android:id="@+id/titleFood"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/frameLayout2"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout3">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/food_label"
            android:id="@+id/foodLabel"
            android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_gravity="center|right"
            android:inputType="none|textAutoComplete|textAutoCorrect" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/frameLayout3"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/brand_label"
            android:id="@+id/brandLabel"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_gravity="center|right"
            android:inputType="none|textAutoComplete|textAutoCorrect" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/frameLayout4"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/serving_label"
            android:id="@+id/servingLabel"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:layout_gravity="center"
            android:inputType="number" />

        <Spinner
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerMeasures"
            android:layout_gravity="center_horizontal|right" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/frameLayout5"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout6">


        <CheckBox
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/text_breakfast"
            android:id="@+id/checkBoxBreakfast"
            android:layout_gravity="right|top" />

        <CheckBox
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/text_lunch"
            android:id="@+id/checkBoxLunch"
            android:layout_gravity="right|center_vertical" />

        <CheckBox
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/text_dinner"
            android:id="@+id/checkBoxDinner"
            android:layout_gravity="right|bottom" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout6">

        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/buttonCancel"
            android:layout_gravity="center_vertical|left|top"
            android:clickable="true" />

        <Button
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add_food"
            android:id="@+id/buttonAddFood"
            android:layout_gravity="center_vertical|right|top"
            android:clickable="true" />
    </FrameLayout>

</RelativeLayout>
