<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gayaneh.befit.NutritionFragment"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/frameLayout">
        <ImageView
            android:id="@+id/trayImage"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:src="@drawable/food_tray"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/my_nutrition"
            android:layout_marginLeft="10dp"
            android:id="@+id/textNutrition"
            android:layout_gravity="right|top" />
        <FrameLayout
            android:layout_width="146dp"
            android:layout_height="80dp"
            android:layout_gravity="right|"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add_food"
                android:id="@+id/buttonFood"
                android:layout_gravity="center|bottom" />
        </FrameLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="right|top">


                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_date"
                        android:id="@+id/textDate" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/editDate"
                        android:layout_weight="1"
                        android:hint="@string/date_format" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="70dp">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_breakfast"
                        android:id="@+id/textBreakfast"
                        android:layout_gravity="center_vertical|left" />

                    <Spinner
                        android:layout_width="124dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerBreakfast"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/serving_label"
                        android:id="@+id/textView5"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText6"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:editable="true"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="140dp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="true">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_lunch"
                        android:id="@+id/textLunch"
                        android:layout_gravity="center_vertical|left" />

                    <Spinner
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerLunch"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/serving_label"
                        android:id="@+id/textView6"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText7"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="210dp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="true"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_dinner"
                        android:id="@+id/textDinner"
                        android:layout_gravity="center_vertical|left" />

                    <Spinner
                        android:layout_width="107dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerDinner"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.10" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/serving_label"
                        android:id="@+id/textView7"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText8"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:editable="true"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="280dp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="50dp"
                        android:text="@string/button_cancel"
                        android:id="@+id/cancel" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_save_calendar"
                        android:id="@+id/save" />
                </LinearLayout>


        </FrameLayout>
    </RelativeLayout>


</RelativeLayout>
